# linkedin

./: .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  build.sh  dev-requirements.txt  docker-requirements.txt  docker-run.sh  go.mod  go.sum  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix  test.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yaml  deploy.yml  python.yaml
.vim/: coc-settings.json
cicd/: custom_style_check.py  docker-publish.sh  publish-gitlab-release.sh
cmd/linkedin-matrix/: legacymigrate.go  legacyprovision.go  main.go
linkedin_matrix/: __init__.py  __main__.py  analytics.py  config.py  example-config.yaml  get_version.py  matrix.py  portal.py  puppet.py  segment_analytics.py  user.py  version.py
linkedin_matrix/commands/: __init__.py  auth.py  spaces.py  typehint.py
linkedin_matrix/db/: __init__.py  cookie.py  http_header.py  message.py  model_base.py  portal.py  puppet.py  reaction.py  user.py  user_portal.py
linkedin_matrix/db/upgrade/: __init__.py  v01_initial_revision.py  v02_multiple_reaction_per_message.py  v03_add_topic_to_portal.py  v04_add_portal_meta_set.py  v05_add_index_to_reaction.py  v06_add_space_mxid_to_user.py  v07_puppet_contact_info_set.py  v08_splat_pickle_data.py  v09_cookie_table.py  v10_http_header_table.py
linkedin_matrix/formatter/: __init__.py  from_linkedin.py  from_matrix.py
linkedin_matrix/util/: __init__.py  color_log.py
linkedin_matrix/web/: __init__.py  provisioning_api.py
linkedin_messaging/: __init__.py  api_objects.py  linkedin.py  test_urn.py
mautrix_linkedin/: __main__.py  config.py  example-config.yaml  portal.py  puppet.py  user.py
mautrix_linkedin/db/: __init__.py
mautrix_linkedin/util/: color_log.py
pkg/connector/: backfill.go  client.go  client_sync.go  config.go  connector.go  dbmeta.go  example-config.yaml  handlelin.go  handlematrix.go  login.go  mapping.go
pkg/linkedingo/: client.go  client_test.go  errors.go  headers.go  http.go  media.go  messaging.go  page_loader.go  realtime.go
pkg/linkedingo/cookies/: cookies.go
pkg/linkedingo/debug/: logger.go
pkg/linkedingo/event/: event.go
pkg/linkedingo/event/raw/: decorated.go  messaging.go  presence.go
pkg/linkedingo/methods/: html.go  methods.go
pkg/linkedingo/routing/: endpoints.go  store.go
pkg/linkedingo/routing/payload/: graphql.go  media.go  messaging.go
pkg/linkedingo/routing/query/: graphql.go  logout.go  messaging.go
pkg/linkedingo/routing/response/: graphql.go  media.go  messaging.go
pkg/linkedingo/types/: conversations.go  device.go  events.go  graphql.go  http.go  user_profile.go
