[tool.poetry]
name = "linkedin_matrix"
version = "0.5.2"
description = "A Matrix-LinkedIn Messages puppeting bridge."
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://gitlab.com/beeper/linkedin"
repository = "https://gitlab.com/beeper/linkedin"
keywords = ["matrix", "LinkedIn"]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Topic :: Communications :: Chat",
]

# Add the Olm repository
[[tool.poetry.source]]
name = "matrix-olm"
url = "https://gitlab.matrix.org/api/v4/projects/27/packages/pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = ">=0.23.0"
commonmark = "^0.9.1"
linkedin-messaging = "^0.5.0"
mautrix = "^0.14.0"
python-magic = "^0.4.24"
"ruamel.yaml" = "^0.17.0"
Pillow = {version = "^8.3.1", optional = true}
prometheus-client = {version = "^0.11.0", optional = true}
pycryptodome = {version = "^3.10.1", optional = true}
python-olm = {version = "*", optional = true}
unpaddedbase64 = {version = "^2.1.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-import-order = "^0.18.1"
flake8-print = "^4.0.0"
mypy = "^0.910"
pytest = "^6.2.5"
termcolor = "^1.1.0"
types-chardet = "^4.0.1"
types-termcolor = "^1.1.2"

[tool.poetry.extras]
images = ["Pillow"]
e2be = ["pycryptodome", "python-olm", "unpaddedbase64"]
metrics = ["prometheus-client"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# MyPy Config

[[tool.mypy.overrides]]
module = [
    # https://github.com/MagicStack/asyncpg/pull/577
    "asyncpg",
    "bs4",
    "PIL",
    "ruamel",
]
ignore_missing_imports = true

# Black config

[tool.black]
line-length = 99
target-version = ["py39"]
required-version = "21.12b0"
