[tool.poetry]
name = "linkedin_matrix"
version = "0.5.3"
description = "A Matrix-LinkedIn Messages puppeting bridge."
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/beeper/linkedin"
repository = "https://github.com/beeper/linkedin"
keywords = ["matrix", "LinkedIn"]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Topic :: Communications :: Chat",
]

# Add the Olm repository
[[tool.poetry.source]]
name = "matrix-olm"
url = "https://gitlab.matrix.org/api/v4/projects/27/packages/pypi/simple"

[tool.poetry.dependencies]
asyncpg = ">=0.23.0"
commonmark = "^0.9.1"
linkedin-messaging = "^0.5.2"
mautrix = "^0.17.6"
Pillow = {version = "^8.3.1", optional = true}
prometheus-client = {version = "^0.11.0", optional = true}
pycryptodome = {version = "^3.10.1", optional = true}
python = "^3.9"
python-magic = "^0.4.24"
python-olm = {version = "*", optional = true}
"ruamel.yaml" = "^0.17.0"
unpaddedbase64 = {version = "^2.1.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-isort = "^4.1.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
termcolor = "^1.1.0"
types-chardet = "^4.0.1"
types-termcolor = "^1.1.2"

[tool.poetry.extras]
images = ["Pillow"]
e2be = ["pycryptodome", "python-olm", "unpaddedbase64"]
metrics = ["prometheus-client"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# MyPy Config

[[tool.mypy.overrides]]
module = [
    # https://github.com/MagicStack/asyncpg/pull/577
    "asyncpg",
    "bs4",
    "PIL",
    "ruamel",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_to_top = "typing"
from_first = true
combine_as_imports = true
known_first_party = "mautrix"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py38"]
